# gpt-kit

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml  release.yml
dev/code_garden_draft/: gpt_kit.api.sample_4.py  gpt_kit.main.sample_1.py
dev/ingest/: 1_.py  2_.py  4_drop_excessive_history.py
dev/startup_draft/: startup.py
gpt_kit/: __init__.py
gpt_kit/api/: core.py  gpt_api.py  magic.py  utils.py
gpt_kit/chat/: magic.py
gpt_kit/gpt_engine/: config.py  gpt_engine.py  magic.py
gpt_kit/markup/: __init__.py
tests/: test_import.py
tests/gpt_kit/api/: test_core.py  test_utils.py
