[tool.poetry]
name = "gpt-kit"
version = "0.1.2" # fix gpt_engine chat_create
description = "OOP wrapper and utils for OpenAI GPT API"
authors = ["Reliable Magician <petr.b.lavrov@gmail.com>"]
readme = "README.md"
packages = [{ include = "gpt_kit" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
openai = "*"
python-dotenv = "*"
pytest = "*"
toml = "*"
tiktoken = "*"
pydantic-settings = "*"
loguru = "*"
aiolimiter = "*"
ratelimiter = "*"

[tool.poetry.group.dev.dependencies]
llm-tester = { git = "https://github.com/engineering-friends/LLM-Tester-WIP.git", branch = "frozen-gpt-kit" }
jupyter = "*"
pandas = "*"
black = "*"
pytest = "*"
transformers = "*"
langchain = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Home" = "https://github.com/calmmage/gpt_kit"
